@@ -3,6 +3,7 @@
 ---------
 - Fix auto-assigned IDs overlapping when adding vehicles.
 - Add sprite cache.
+- Optimize memory usage when writing NewGRF.
 - Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
 - Add `mode` argument to `Mask` with option to overdraw sprite.
 - Add `ShipFlags` enum.
